@@ -208,8 +208,8 @@ varpanel_switch_page_cb (GtkNotebook *notebook, GtkNotebookPage *page,
   if (gg->status_message_func) {
     datad *d = (datad *) g_slist_nth_data (gg->d, page_num);
     if (d) {
-      gchar *msg = g_strdup_printf ("%s: %d x %d",
-        d->name, d->nrows, d->ncols);
+      gchar *msg = g_strdup_printf ("%s: %d x %d (%s)",
+        d->name, d->nrows, d->ncols, gg->input->fileName);
       gg->status_message_func(msg, gg);
       g_free (msg);
     }
